Add version 2, version 3, and carousel slides
- Version 2: Blue & cyan tech theme
- Version 3: Light & green sustainability theme
- Carousel: 5 slides (1080x1080) for LinkedIn carousel posts
- Added lab logos (logo_light.svg, logo_dark.svg)
- Updated all to use AAAI instead of AAAI '26
- capture-all.js to generate all PNGs at once

--- a/sustainability-lab-2025-review.html
+++ b/sustainability-lab-2025-review.html
@@ -561,7 +561,7 @@
                         <h2 class="section-title">PUBLICATIONS</h2>
                     </div>
                     <div class="pub-item">
-                        <div class="pub-badge">AAAI '26</div>
+                        <div class="pub-badge">AAAI</div>
                         <div class="pub-name">Air-Quality Sensor Placement</div>
                     </div>
                     <div class="pub-item">
